--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,9 +4,9 @@ license="All Rights Reserved"
 
 [[mods]]
 modId="blood_crystal"
-version="1.1.0"
+version="2.0"
 displayName="Blood crystal"
-credits="Code by SuperFeda, texture by Hothili."
+credits="Code and textures by SuperFeda, texture by Hothili."
 displayURL="https://discord.gg/GFpmfNPPPy"
 authors="SkylightProduction"
 
